gemName + gemVersion
