# misc/openapi-generator-configs/openapi-generator-api/api.yaml
@@ -152,6 +152,10 @@ components:
           type: string
         npmVersion:
           type: string
+        gemName:
+          type: string
+        gemVersion:
+          type: string
         npmName:
           type: string
         readmeSnippet:
